See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.38.0

              Pnmtopclxl: fix -feeder, -outtray options.  Thanks
              "Eric K. Olson" <olson@mauicomputing.com>.

              Add pamfixtrunc.

              pamditherbw: Add -atkinson.

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pambackground: recognize mid-row background.

              ppm3d: Change default offset to zero columns.

              ppm3d: Add -color option.

              ppm3d: Add -offset option as alternative to offset argument.

              jpegtopnm: Add -repair option.

              giftopnm: Add -repair option.

              libnetpbm: shhopt: reject signed number as value for
              OPT_UINT option.

              libnetpbm: in the "no such option" error message, say what
              the valid options are.

              libnetpbm: Embellish "bad magic number" error message.

              pamtogif: fix crash with -mapfile.

              pamtoxvmini: fix bug: produces garbage when maxval is
              not 255.

              pamtoxvmini: fix crash.

              libnetpbm: fix buffer overrun with PBM images < 8 columns.

              libnetpbm: fix crash with PBM images < 8 columns on MMX/SSE
              machine.

              pamtogif: fail properly if image to wide or high for GIF.

              ppmdraw: fix crash with use of freed storage.  Thanks
              John Walker <kelvin@fourmilab.ch>.

              libnetpbm: fix crash with PAM read as PNM.

              installnetpbm: use 2-argument open() for old Perl.
    
              configure: default to 'none' for Svgalib if it doesn't appear
              to be installed.

06.12.31 BJH  Release 10.37.0
