@@ -6,7 +6,10 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.38.0
 
-              Pnmtopclxl: fix -feeder, -outtray options.  Thanks
+              pnmremap: fix incorrect output with map file deeper than
+              input file.
+
+              pnmtopclxl: fix -feeder, -outtray options.  Thanks
               "Eric K. Olson" <olson@mauicomputing.com>.
 
               Add pamfixtrunc.
